fixing the strange white space and wrapping issues on the vote page.

--- a/site/media/main.css
+++ b/site/media/main.css
@@ -197,6 +197,7 @@ button, .textReplace, #shareBtns li a { text-indent: -9999em; display: block; bo
 	margin-right: 0;
 }
 
+
 .filterCol { background-color: #f5f4e8; padding: 20px 15px 40px; border-top: 1px solid #e1e1d9; border-right: 1px solid #ECEADD; border-left: 1px solid #ECEADD; border-bottom: 1px solid #ECEADD;}
 .filterCol select { width: 120px;}
 .filterCol input { width: 108px;}
@@ -1633,4 +1634,6 @@ li.greyArrow:before {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e5dc', endColorstr='#e5e5dc',GradientType=0 ); /* IE6-9 */
 
 }
-
+.maxWidth {
+    max-width:100%;
+}
